--- a/css/styles.css
+++ b/css/styles.css
@@ -1,9 +1,9 @@
 body {
   text-align: center;
-  background-color: bisque;
-  font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+  background-color: lavender;
+  font-family: Georgia, 'Times New Roman', Times, serif
 }
 
 h1 {
-  color: 
+  color: purple
 }
